...
import cz.mendelu.pef.compose.todo.ui.elements.PlaceholderScreenContent
import cz.mendelu.pef.petstore.model.Pet
import cz.mendelu.pef.petstore.model.UiState
import cz.mendelu.pef.petstore.ui.elements.BaseScreen
import cz.mendelu.pef.petstore.ui.theme.basicTextColor

const val TestTagListOfPetsScreenLazyList = "TestTagListOfPetsScreenLazyList"

@Composable
fun ListOfPetsScreen(
    navigateToPetDetail: (petId: Long) -> Unit,
    viewModel: ListOfPetsViewModel = hiltViewModel()
) {
...
